cmake_minimum_required(VERSION 2.6)
project(simple-crypto C)
SET(CMAKE_BUILD_TYPE "Release")

include(TestBigEndian)
test_big_endian(isBigEndian)
if (${isBigEndian})
    add_definitions(-DWORDS_BIGENDIAN)
endif()

#在编译选项中加入c99支持
add_compile_options(-std=c99)
message(STATUS "optional:-std=c99")

if($ENV{BUILDTEST})
    add_definitions(-DTEST_SIMPLE_CRYPTO)
    add_executable(smd5 md5.c)
    add_executable(stea tea.c)
else()
    add_library(scrypto SHARED md5.c tea.c)
    add_library(scrypto_static STATIC md5.c tea.c)
    set_target_properties(scrypto_static PROPERTIES OUTPUT_NAME scrypto)
    INSTALL(TARGETS scrypto LIBRARY DESTINATION lib)
    INSTALL(TARGETS scrypto_static ARCHIVE DESTINATION lib)
    INSTALL(FILES simplecrypto.h DESTINATION include)
endif()
